# discord-coach-bot

./: .env  .flake8  .pylintrc  README.md  coverage_report.txt  database.py  discord_bot.db  flake8_report.txt  main.py  models.py  planning.txt  pylint_report.txt  quickadd_commands.txt  requirement.txt  requirements.txt  setup.cfg  utils.py
cogs/: activities.py  add_activity.py  add_equipment.py  add_workout.py  delete_activity.py  delete_equipment.py  equipment.py  equipments.py  guessing_game.py  leaderboards.py  quickadd.py  reports.py  retire_equipment.py  strava.py  unretire_equipment.py
tests/: test_database.py  test_models.py  test_utils.py
