[metadata]
name = coachbot
version = 1.0.0
description = Discord Coach Bot
author = Gergő Mindszenti
author_email = mindszenti.gergo@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    discord.py
    python-dotenv
    discord
    requests
    dotenv
    typing_extensions
    Flask
python_requires = >=3.10

[options.package_data]
* = *.txt, *.md
